--- a/RoamAI/Views/Shared/_Layout.cshtml
+++ b/RoamAI/Views/Shared/_Layout.cshtml
@@ -6,11 +6,66 @@
     <title>@ViewData["Title"] - RoamAI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/RoamAI.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+
+
+    <style>
+        .social-links {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .social-links li {
+            margin-bottom: 100px;
+      
+        }
+
+        .social-links a {
+            text-decoration: none;
+            color: white;
+        }
+
+
+        .navbar.bg-transparent {
+            backdrop-filter: blur(5px); 
+        }
+
+        .navbar .btn {
+            margin: 0.5rem;
+            padding: 0.5rem 1rem;
+            border-radius: 0.3rem;
+        }
+
+        .navbar-brand {
+            transition: color 0.5s ease; 
+        }
+
+        .navbar-brand:hover {
+            color: white !important; 
+        }
+
+        main {
+            margin-top: 80px;
+        }
+
+        .box-shadow {
+            box-shadow: 0 .25rem .75rem rgba(0, 0, 0, 0.5);
+        }
+        .container-footer{
+            padding:25px;
+            background-color: #70807e;
+        }
+        .footer{
+            padding: 0px !important;
+
+        }
+    </style>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent fixed-top border-bottom box-shadow mb-3">
+
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RoamAI</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,16 +75,20 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="CurrentTrip">Güncel Seyahatim</a>
-
-                        </li
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="MyTrips">Seyahatlerim</a>
+                            <a class="btn btn-outline-primary nav-link mx-1" asp-area="" asp-controller="Trip" asp-action="CurrentTrip" style="color: white;">
+                                Güncel Seyahatim
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="CreateTrip">Seyahat Oluştur</a>
+                            <a class="btn btn-outline-primary nav-link mx-1" asp-area="" asp-controller="Trip" asp-action="MyTrips" style="color: white;">
+                                Seyahatlerim
+                            </a>
                         </li>
-                        
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary nav-link mx-1" asp-area="" asp-controller="Trip" asp-action="CreateTrip" style="color: white;">
+                                Seyahat Oluştur
+                            </a>
+                        </li>
                     </ul>
 
                     <!-- _LoginPartial.cshtml burada çağrılıyor -->
@@ -38,17 +97,78 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    
+    
+    <main role="main" style="margin-top: 0px;">
+        @RenderBody()
+    </main>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - RoamAI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="text-white footer pt-4">
+        <div class="container-footer text-center text-md-start primary">
+            <div class="row" style="padding:10px 0px 0px 200px;">
+
+                <div class="col-md-4 mb-4">
+                    <h5 class="fw-bold text">Hakkımızda</h5>
+                    <p style="width:300px;">
+                        RoamAI, seyahatlerinizi planlamanızı ve yönetmenizi kolaylaştıran yenilikçi bir platformdur. Amacımız, her yolculuğu unutulmaz kılmaktır.
+                    </p>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class=" fw-bold text" style="margin-left:25px;">Bize Ulaşın</h5>
+                            <p><i class="bi bi-geo-alt-fill"></i> İstanbul, Türkiye</p>
+                            <p><i class="bi bi-envelope-fill"></i> info@roamai.com</p>
+                            <p><i class="bi bi-telephone-fill"></i> +90 123 456 78 90</p>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="text-center fw-bold">Bizi Takip Edin</h5>
+                            <div class="row">
+                                <div class="col-6">
+                                    <ul class="list-unstyled social-links">
+                                        <li class="mb-2">
+                                            <a href="#" class="btn btn-outline-light btn-floating m-1" style="width: 100%;">
+                                                <i class="bi bi-facebook me-2"></i> Facebook
+                                            </a>
+                                        </li>
+                                        <li class="mb-2">
+                                            <a href="#" class="btn btn-outline-light btn-floating m-1" style="width: 100%;">
+                                                <i class="bi bi-twitter me-2"></i> Twitter
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="col-6">
+                                    <ul class="list-unstyled social-links">
+                                        <li class="mb-2">
+                                            <a href="#" class="btn btn-outline-light btn-floating m-1" style="width: 100%;">
+                                                <i class="bi bi-instagram me-2"></i> Instagram
+                                            </a>
+                                        </li>
+                                        <li class="mb-2">
+                                            <a href="#" class="btn btn-outline-light btn-floating m-1" style="width: 100%;">
+                                                <i class="bi bi-linkedin me-2"></i> LinkedIn
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.3); border-radius:15px;">
+                © 2024 RoamAI. Tüm hakları saklıdır.
+            </div>
         </div>
     </footer>
+
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
