--- a/RoamAI/Views/Trip/MyTrips.cshtml
+++ b/RoamAI/Views/Trip/MyTrips.cshtml
@@ -1,18 +1,74 @@
 ﻿@using RoamAI.Models.Entities
 @model List<Trip>
 
-<div class="card mb-4 mt-2">
+<style>
+    body {
+        background: url('/images/travel8.png') no-repeat center center fixed;
+        background-size: cover;
+        font-family: Arial, sans-serif;
+        color: #333;
+    }
 
+    .card {
+        background-color: rgba(255, 255, 255, 0.9);
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        margin: 90px 90px 10px 90px !important;
+        padding: 20px 20px 20px 20px !important;
+    }
+
+    .table {
+        border-radius: 15px;
+        overflow: hidden;
+    }
+
+    .table th {
+        background-color: #007bff;
+        color: white;
+        text-align: center;
+    }
+
+    .table td {
+        text-align: center;
+    }
+
+    .btn {
+        margin-right: 5px;
+    }
+
+    .card-body {
+        padding: 3px;
+    }
+
+    .table-responsive {
+        margin-top: 20px;
+    }
+
+    .card-title {
+        text-align: center;
+        font-size: 45px;
+        font-weight: bold;
+        color: #007bff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        margin-bottom: 20px;
+        position: relative;
+    }
+
+   
+</style>
+
+<div class="card mb-4 mt-2">
     <div class="card-body">
+        <h3 class="card-title">Önceki Gezilerim</h3>
         <div class="table-responsive">
-            <table class="table table-bordered" width="100%" cellspacing="0" >
+            <table class="table table-bordered table-hover" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>Ülke</th>
                         <th>Şehir</th>
                         <th>Gidiş Tarihi</th>
                         <th>Dönüş Tarihi</th>
-                        
+                        <th>İşlemler</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -21,17 +77,12 @@
                         <tr>
                             <td>@trip.Country</td>
                             <td>@trip.City</td>
-                            <td>@trip.StartDate</td>
-                            <td>@trip.EndDate</td>
-                            
-
+                            <td>@trip.StartDate.ToString("dd-MM-yyyy")</td>
+                            <td>@trip.EndDate.ToString("dd-MM-yyyy")</td>
                             <td>
-
                                 <a class="btn btn-sm btn-warning" asp-controller="Trip" asp-action="TripDetail" asp-route-id="@trip.Id">Detay</a>
                                 <a class="btn btn-sm btn-danger" asp-controller="Trip" asp-action="Delete" asp-route-id="@trip.Id" onclick="return confirm('Bu kaydı silmek istediğinize emin misiniz?')">Sil</a>
-
                             </td>
-
                         </tr>
                     }
                 </tbody>
